deployments/200-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  labels:
    app: controller
  namespace: foghorn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
      - name: controller
        image: github.com/foghornci/foghorn/cmd/controller
        ports:
        - containerPort: 8080
