deployments/300-catcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catcher
  namespace: foghorn
  annotations:
    app: catcher
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: catcher
  sessionAffinity: None
  type: NodePort
