deployments/400-catcher-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    app: catcher
  name: catcher
  namespace: foghorn
spec:
  rules:
  - host: catcher.example.com
    http:
      paths:
      - backend:
          serviceName: catcher
          servicePort: 80
        path: /
